--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Reflow-restyle-repaint by Olegas</title>
+    <title>Reflow, Restyle, Repaint или Где еще живет скорость в Web</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Reflow-restyle-repaint</h1>
+        <h1>Reflow, Restyle, Repaint</h1>
         <p>Code samples to illustrate how browser renders HTML+CSS, how to profile it and avoid common pitfalls</p>
 
         <p class="view"><a href="https://github.com/Olegas/reflow-restyle-repaint">View the Project on GitHub <small>Olegas/reflow-restyle-repaint</small></a></p>
@@ -28,32 +28,17 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Оглавление</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <ol>
+          <li><a href="./1-naive-animation.html">"Наивная" анимация</a></li>
+          <li><a href="./2-smart-animation.html">"Умная" анимация</a></li>
+          <li><a href="./3-reflow-restyle-repaint.html">Reflow, restyle, repaint</a></li>
+          <li><a href="./4-reflow-restyle-repaint-fixed.html">Reflow, restyle, repaint - исправленная версия</a></li>
+          <li><a href="./5-jquery-pitfalls.html">jQuery тоже делает это!</a></li>
+          <li><a href="./6-jquery-pitfalls-fixed.html">jQuery - исправляем.</a></li>
+        </ol>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Olegas">Olegas</a></p>
